Fix content overflow issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .app-container {
-    display: flex;
+    display: block;
     justify-content: center;
 }
 
@@ -9,6 +9,7 @@
 
 .top-bar-container {
     background-color: rgba(169, 169, 169, 0.85);
+    display: flex;
     
 }
 
